--- a/TCGA_code/example_test/example_pipeline.ipynb
+++ b/TCGA_code/example_test/example_pipeline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "35a8aa24",
+   "id": "aab06a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,109 +15,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "5e1207f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "symbol\tvalue\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Read in data file\n",
-    "\n",
-    "f1 = open(\"example_input_sample.txt\", \"r\", encoding='UTF-8')\n",
-    "f2 = open(\"example_profile.txt\", \"r\", encoding='UTF-8')\n",
-    "\n",
-    "print(f1.readline())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "ece24fa5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['gene1', '3\\n']\n",
-      "['gene1', '3\\n']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Index(...) must be called with a collection of some kind, '3\\n' was passed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [80]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m line \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;66;03m#.replace('\\n', \"\")\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(line)\n\u001b[0;32m---> 10\u001b[0m temp_series \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSeries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mline\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfloat64\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m sample\u001b[38;5;241m.\u001b[39mappend(temp_series)\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/series.py:380\u001b[0m, in \u001b[0;36mSeries.__init__\u001b[0;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[1;32m    376\u001b[0m     \u001b[38;5;66;03m# uncomment the line below when removing the FutureWarning\u001b[39;00m\n\u001b[1;32m    377\u001b[0m     \u001b[38;5;66;03m# dtype = np.dtype(object)\u001b[39;00m\n\u001b[1;32m    379\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 380\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[43mensure_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    382\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    383\u001b[0m     data \u001b[38;5;241m=\u001b[39m {}\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:7043\u001b[0m, in \u001b[0;36mensure_index\u001b[0;34m(index_like, copy)\u001b[0m\n\u001b[1;32m   7041\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m Index\u001b[38;5;241m.\u001b[39m_with_infer(index_like, copy\u001b[38;5;241m=\u001b[39mcopy, tupleize_cols\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m   7042\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 7043\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mIndex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_with_infer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:680\u001b[0m, in \u001b[0;36mIndex._with_infer\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m    678\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m warnings\u001b[38;5;241m.\u001b[39mcatch_warnings():\n\u001b[1;32m    679\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.*the Index constructor\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;167;01mFutureWarning\u001b[39;00m)\n\u001b[0;32m--> 680\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    682\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m==\u001b[39m _dtype_obj \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m result\u001b[38;5;241m.\u001b[39m_is_multi:\n\u001b[1;32m    683\u001b[0m     \u001b[38;5;66;03m# error: Argument 1 to \"maybe_convert_objects\" has incompatible type\u001b[39;00m\n\u001b[1;32m    684\u001b[0m     \u001b[38;5;66;03m# \"Union[ExtensionArray, ndarray[Any, Any]]\"; expected\u001b[39;00m\n\u001b[1;32m    685\u001b[0m     \u001b[38;5;66;03m# \"ndarray[Any, Any]\"\u001b[39;00m\n\u001b[1;32m    686\u001b[0m     values \u001b[38;5;241m=\u001b[39m lib\u001b[38;5;241m.\u001b[39mmaybe_convert_objects(result\u001b[38;5;241m.\u001b[39m_values)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n",
-      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/indexes/base.py:508\u001b[0m, in \u001b[0;36mIndex.__new__\u001b[0;34m(cls, data, dtype, copy, name, tupleize_cols, **kwargs)\u001b[0m\n\u001b[1;32m    505\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m klass\u001b[38;5;241m.\u001b[39m_simple_new(arr, name)\n\u001b[1;32m    507\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_scalar(data):\n\u001b[0;32m--> 508\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_scalar_data_error(data)\n\u001b[1;32m    509\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(data, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__array__\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    510\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Index(np\u001b[38;5;241m.\u001b[39masarray(data), dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy, name\u001b[38;5;241m=\u001b[39mname, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[0;31mTypeError\u001b[0m: Index(...) must be called with a collection of some kind, '3\\n' was passed"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# profile = pd.Series([2,3,4,7,8,9,1,4,6,1], index = [\"g1\", \"g2\", \"g3\", \"g4\", \"g5\", \"g6\",\"g7\", \"g8\", \"g9\", \"g10\"])\n",
-    "sample = pd.Series(dtype='float64')\n",
-    "for l in f1:\n",
-    "    # read every line into the dataframe for sample\n",
-    "    #sample.append(pd.Series[])\n",
-    "    line = f1.readline()\n",
-    "    print(line.split(\"\\t\"))\n",
-    "    line = line.split(\"\\t\")#.replace('\\n', \"\")\n",
-    "    print(line)\n",
-    "    temp_series = pd.Series(line[0], index = line[1], dtype='float64')\n",
-    "    sample.append(temp_series)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "d87c030c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Series([], dtype: float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sample)\n",
-    "\n",
-    "# Assume I have two data series with sample data and profile data:"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "1a19cbf8",
+   "id": "a74a8806",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad31dcb9",
+   "execution_count": 2,
+   "id": "be5f81c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# Read in data file\n",
+    "\n",
+    "f1 = open(\"example_input_sample.txt\", \"r\", encoding='UTF-8')\n",
+    "f1.readline()\n",
+    "\n",
+    "index = []\n",
+    "values = []\n",
+    "for l in f1: \n",
+    "    # read every line into the dataframe for sample\n",
+    "    #sample.append(pd.Series[])\n",
+    "    line = f1.readline()\n",
+    "    line = line.split(\"\\t\")\n",
+    "    index.append(line[0])\n",
+    "    values.append(line[1])\n",
+    "\n",
+    "sample = pd.Series(values, index, dtype='float64')\n",
+    "f1.close()\n",
+    "#******************************************************#\n",
+    "\n",
+    "f2 = open(\"example_profile.txt\", \"r\", encoding='UTF-8')\n",
+    "f2.readline()\n",
+    "\n",
+    "index = []\n",
+    "values = []\n",
+    "for l in f2: \n",
+    "    # read every line into the dataframe for sample\n",
+    "    #sample.append(pd.Series[])\n",
+    "    line = f2.readline()\n",
+    "    line = line.split(\"\\t\")\n",
+    "    index.append(line[0])\n",
+    "    values.append(line[1])\n",
+    "\n",
+    "profile = pd.Series(values, index, dtype='float64')\n",
+    "f2.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "57926b90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assume I have two data series with sample data and profile data:\n",
+    "# print(sample, profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e05499b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " FutureWarning:/Users/jenniliu/opt/anaconda3/lib/python3.9/site-packages/TCGA_code/match_computation.py:150: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
+      " FutureWarning:/Users/jenniliu/opt/anaconda3/lib/python3.9/site-packages/TCGA_code/match_computation.py:150: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance = m.compute_distance(profile, sample)\n",
+    "\n",
+    "print(distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "708bac60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a significant overlap!\n",
+      "0.319\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance = 1\n",
+    "# compute distance here\n",
+    "#distance = sample_data - profile\n",
+    "set1 = set(sample.index)  # results in removal of duplicates\n",
+    "set2 = set(profile.index)      # results in removal of duplicates\n",
+    "intersection = list(set1.intersection(set2))  # returns the elements that are the same among set1 and set2\n",
+    "overlap_no = len(intersection)  # returns the size of the intersection\n",
+    "\n",
+    "smaller_set_no = min(len(set1), len(set2))  # len = 3\n",
+    "perc_overlap = overlap_no/smaller_set_no  # 1/3 = 0.33\n",
+    "\n",
+    "#distance = sample_data[intersection].corr(profile[intersection])\n",
+    "#distance = round(distance, 3)\n",
+    "\n",
+    "if (perc_overlap > 0.6):\n",
+    "    #distance = sum(abs(sample_data[intersection]-profile[intersection]))  # TAKE CORRELATION\n",
+    "    print(\"There is a significant overlap!\")\n",
+    "    distance = sample[intersection].corr(profile[intersection])\n",
+    "    distance = round(distance, 3)\n",
+    "print(distance)"
    ]
   }
  ],
