--- a/TCGA_code/example_test/example_pipeline.ipynb
+++ b/TCGA_code/example_test/example_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "aab06a8e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "a74a8806",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Read in data file\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m sample_data \u001b[38;5;241m=\u001b[39m \u001b[43mm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_expr_profile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mexample_input_sample.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m profile \u001b[38;5;241m=\u001b[39m m\u001b[38;5;241m.\u001b[39mread_TCGA_sample(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexample_profile.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Read in data file\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m sample_data \u001b[38;5;241m=\u001b[39m \u001b[43mm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_expr_profile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mexample_input_sample.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/TCGA_code/match_computation.py:31\u001b[0m, in \u001b[0;36mread_expr_profile\u001b[0;34m(file_name)\u001b[0m\n\u001b[1;32m     28\u001b[0m profile_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(file_name, sep \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, squeeze \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# index = gene symbols\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m index \u001b[38;5;241m=\u001b[39m \u001b[43mref_profile_data\u001b[49m\u001b[38;5;241m.\u001b[39miloc[:,\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# values = gene_expression\u001b[39;00m\n\u001b[1;32m     34\u001b[0m values \u001b[38;5;241m=\u001b[39m ref_profile_data\u001b[38;5;241m.\u001b[39miloc[:,\u001b[38;5;241m2\u001b[39m]\n",
       "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'ref_profile_data' referenced before assignment"
      ]
@@ -45,7 +45,9 @@
     "# Read in data file\n",
     "\n",
     "sample_data = m.read_expr_profile(\"example_input_sample.csv\")\n",
-    "profile = m.read_TCGA_sample(\"example_profile.csv\")\n"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -55,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "profile = m.read_TCGA_sample(\"example_profile.csv\")\n",
     "is_match = m.test_match(profile, sample_data, threshold)\n",
     "is_present = m.check_profile(profile, sample_data)\n",
     "\n",
