--- a/TCGA_code/example_test/example_pipeline.ipynb
+++ b/TCGA_code/example_test/example_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "aab06a8e",
    "metadata": {},
    "outputs": [],
@@ -96,6 +96,58 @@
     "distance = m.compute_distance(profile, sample)\n",
     "print(distance)\n",
     "# This is the correlation value of the two gene expression level files.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "35edf3ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      symbol  value\n",
+      "0      gene1      2\n",
+      "1      gene1      3\n",
+      "2      gene2      4\n",
+      "3      gene3      3\n",
+      "4      gene4      2\n",
+      "5      gene2      9\n",
+      "6      gene3     10\n",
+      "7      gene2      2\n",
+      "8      gene5      2\n",
+      "9      gene6      3\n",
+      "10     gene7      4\n",
+      "11     gene8      3\n",
+      "12     gene9      2\n",
+      "13    gene10      9\n",
+      "14    gene11     10\n",
+      "15    gene12      2\n",
+      "16    gene13      2\n",
+      "17    gene14      3\n",
+      "18    gene15      4\n",
+      "19    gene16      3\n",
+      "20    gene17      2\n",
+      "21    gene18      9\n",
+      "22    gene19     10\n",
+      "23    gene20      2\n",
+      "24    gene21      2\n",
+      "25    gene22      3\n",
+      "26    gene23      4\n",
+      "27    gene24      3\n",
+      "28    gene25      2\n",
+      "29    gene26      9\n",
+      "30    gene27     10\n",
+      "31  Gene1000      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = pd.read_csv(\"/Users/jenniliu/Desktop/BIOINF576/TCGA_Matchmaker/TCGA_code/example_test/example_input_sample.csv\", sep = \";\", encoding=\"UTF-8\")\n",
+    "\n",
+    "print(f)"
    ]
   }
  ],
