Fixed the UI, need to implement more functionalities

--- a/TCGA_code/example_test/example_pipeline.ipynb
+++ b/TCGA_code/example_test/example_pipeline.ipynb
@@ -97,6 +97,40 @@
     "print(distance)\n",
     "# This is the correlation value of the two gene expression level files.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5e35e3bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60660\n",
+      "60660\n",
+      "0.5272527894669061 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "breast = pd.read_csv('breast_cancer_GEP.csv', sep = ';') #example_profile.csv\n",
+    "exp_profile = pd.read_csv('example_profile.csv')\n",
+    "kidney = pd.read_csv('kidney_cancer_GEP.csv', sep = ';')\n",
+    "\n",
+    "breast_values = breast.iloc[:,1].tolist()\n",
+    "kidney_values = kidney.iloc[:,1].tolist()\n",
+    "\n",
+    "print(len(breast_values))\n",
+    "print(len(kidney_values))\n",
+    "\n",
+    "r,p = stats.pearsonr(breast_values, kidney_values)\n",
+    "\n",
+    "print(r,p)"
+   ]
   }
  ],
  "metadata": {
